// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> renders correctly 1`] = `
<button
  ariaLabel="demo-aria"
  className="MuiButtonBase-root-50 MuiButton-root-24 MuiButton-text-26 MuiButton-flat-29 CustomButton-button-1 true CustomButton-sm-18 CustomButton-round-19"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-25"
  />
  <span
    className="MuiTouchRipple-root-53"
  />
</button>
`;

exports[`<Button/> renders correctly 2`] = `
<button
  className="MuiButtonBase-root-50 MuiButton-root-24 MuiButton-text-26 MuiButton-flat-29 CustomButton-button-1 CustomButton-sm-18 CustomButton-round-19"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-25"
  />
  <span
    className="MuiTouchRipple-root-53"
  />
</button>
`;
